[package]
name = "rlwinmdec"
version = "1.0.0"
edition = "2021"
authors = ["Amber Brault <celestialamber1@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Celestialamber/rlwinmdec"
readme = "../README.md"
description = "PPC Rlwinm/Rlwnm/Rlwimi Decoder Tool"
rust-version = "1.58"

[dependencies]
anyhow = "1.0.86"
